--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <script src="asset/JaveScript/jquery-3.6.0.min.js "></script>
 
     <script src="asset/wow/wow.js"></script>
+
+    <script src="asset/jquer.validate/jquery.validate.min.js"></script>
+    <script src="asset/jquer.validate/messages_ar.min.js"></script>
+
+
     <script src="js/js.js"></script>
 
 </head>
