--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -10,17 +10,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <link rel="stylesheet" href="asset/bootstrap/bs5/bootstrap.min.css" />
-
     <link rel="stylesheet" href="asset/font-awesome/fontawesome-all.min.css" />
+    <link rel="stylesheet " href="asset/webfonts/fa-regular-400.ttf" />
 
     <link rel="stylesheet" href="asset/animate/animate.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <script src="asset/bootstrap/js/bootstrap.min.js"></script>
-    <script src="asset/JaveScript/jquery-3.6.0.min.js "></script>
 
-    <script src="asset/wow/wow.js"></script>
+    <script src="asset/JaveScript/jquery-3.6.0.min.js"></script>
+
+    <link rel="stylesheet" href="asset/bootstrap/bs5/bootstrap.min.css" />
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+    <script src="asset/wow/wow.js "></script>
 
     <script src="asset/jquer.validate/jquery.validate.min.js"></script>
     <script src="asset/jquer.validate/messages_ar.min.js"></script>
@@ -51,32 +53,32 @@
                             <p class="wow fadeInDown">
                                 هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات
                             </p>
+                            <!-- إضافة الأزرار حمل التطبيق من المتجر إلى العمود الأيسر -->
+                            <button type="button" class="btn btn-lg text-right wow animate__animated animate__fadeInY">
+                                 <i  class="fa-fa-apple"   aria-hidden="true"></i>
+                                  <img src="images/icons/play.png" />
+                                <p class="mr-3 mb-0">
+                                       حمل التطبيق من
+                                    <br />
+                                    <span class="font-weight-bold">
+                                        متجر جوجل
+                                    </span>
+                                </p>
+                            </button>
+
+                            <button type="button" class="btn btn-lg text-right wow animate__animated animate__fadeInY">
+                                  <i  class="fa-fa-apple"   aria-hidden="true"></i>
+                                  <img src="images/icons/play.png" />
+                                <p class="mr-3 mb-0">
+                                     حمل التطبيق من
+                                    <br />
+                                    <span class="font-weight-bold">
+                                        متجر أبل
+                                    </span>
+                                </p>
+                            </button>
+
                         </div>
-
-                        <!-- إضافة الأزرار حمل التطبيق من المتجر إلى العمود الأيسر -->
-                        <button type="button" class="btn btn-lg text-right wow animate__animated animate__fadeInY">
-                            <i  class="fa-fa-apple"   aria-hidden="true "></i>
-                            <img src="images/icons/play.png" />
-                                <p class="mr-3 mb-0">
-                                    حمل التطبيق من
-                                 <br />
-                                  <span class="font-weight-bold">
-                                     متجر جوجل
-                                   </span>
-                                </p>
-                        </button>
-
-                        <button type="button" class="btn btn-lg text-right wow animate__animated animate__fadeInY">
-                            <i  class="fa-fa-apple"   aria-hidden="true "></i>
-                            <img src="images/icons/play.png" />
-                                <p class="mr-3 mb-0">
-                                    حمل التطبيق من
-                                 <br />
-                                  <span class="font-weight-bold">
-                                     متجر أبل
-                                   </span>
-                                </p>
-                        </button>
 
                     </div>
 
@@ -95,6 +97,7 @@
     <section class="feature" id="feature">
         <div class="container">
             <div class="row no-gutters">
+
                 <div class="col-md">
                     <div class="features text-left">
                         <div class="media">
@@ -106,7 +109,7 @@
                                     هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ
                                 </p>
                             </div>
-                            <i class="fa fa-tree fa-2x align-self-start  mr-3" aria-hidden="true"></i>
+                            <i class="fa fa-tree fa-2x align-self-start mr-3" aria-hidden="true"></i>
                         </div>
 
                         <div class="media">
@@ -118,7 +121,7 @@
                                     هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ
                                 </p>
                             </div>
-                            <i class="fa fa-heart fa-2x  mr-3" aria-hidden="true"></i>
+                            <i class="fa fa-heart fa-2x mr-3" aria-hidden="true"></i>
                         </div>
 
                         <div class="media">
@@ -130,56 +133,55 @@
                                     هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ
                                 </p>
                             </div>
-                            <i class="fa fa-gavel fa-2x  mr-3" aria-hidden="true"></i>
+                            <i class="fa fa-gavel fa-2x mr-3" aria-hidden="true"></i>
                         </div>
-
                     </div>
                 </div>
 
-                <div class="col-md  order-md-4">
-                    <div class="features">
-                        <div class="media">
-                            <div class="media-body">
-                                <h5 class="mt-0">
+                <div class="col-md order-md-4">
+                    <div class="features ">
+                        <div class=" media ">
+                            <div class="media-body ">
+                                <h5 class="mt-0 ">
                                     الميزة الرابعة
                                 </h5>
-                                <p class="mb-2">
+                                <p class="mb-2 ">
                                     هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ
                                 </p>
                             </div>
-                            <i class="fa fa-tree  mr-3" aria-hidden="true"></i>
+                            <i class="fa fa-tree mr-3 " aria-hidden="true "></i>
                         </div>
 
-                        <div class="media">
-                            <div class="media-body">
-                                <h5 class="mt-0">
+                        <div class="media ">
+                            <div class="media-body ">
+                                <h5 class="mt-0 ">
                                     الميزة الخامسة
                                 </h5>
-                                <p class="mb-2">
+                                <p class="mb-2 ">
                                     هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ
                                 </p>
                             </div>
-                            <i class="fa fa-tree  mr-3" aria-hidden="true"></i>
+                            <i class="fa fa-tree mr-3 " aria-hidden="true "></i>
                         </div>
 
-                        <div class="media">
-                            <div class="media-body">
-                                <h5 class="mt-0">
+                        <div class="media ">
+                            <div class="media-body ">
+                                <h5 class="mt-0 ">
                                     الميزة السادسة
                                 </h5>
-                                <p class="mb-2">
+                                <p class="mb-2 ">
                                     هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ
                                 </p>
                             </div>
-                            <i class="fa fa-tree  mr-3" aria-hidden="true"></i>
+                            <i class="fa fa-tree mr-3 " aria-hidden="true "></i>
                         </div>
 
                     </div>
                 </div>
 
-                <div class="col-md  order-md-4">
-                    <div class="mobile-img">
-                        <img src="images/mobile-2.png" alt="mobile-app" />
+                <div class="col-md order-md-4">
+                    <div class="mobile-img ">
+                        <img src="images/mobile-2.png " alt="mobile-app " />
                     </div>
                 </div>
             </div>
@@ -311,12 +313,12 @@
                             <div class="card">
                                 <div class="card-header">
                                     <h5>
-                                        <a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" aria-expanded="true">
-                                            هل التطبيق متاح بأكثر من نظام؟
-                                            </a>
+                                        <a data-toggle="collapse" data-target="#collapseOne" data-parent="#collapseOne" aria-expanded="true">
+                                            <i class="fas fa-angle-up" aria-hidden="true"></i> هل التطبيق متاح بأكثر من نظام؟
+                                        </a>
                                     </h5>
                                 </div>
-                                <div id="collapseOne" class="collapse show">
+                                <div id="collapseOne" class="card-show">
                                     <div class="card-block">
                                         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها.
                                     </div>
@@ -326,13 +328,13 @@
                             <div class="card">
                                 <div class="card-header">
                                     <h5>
-                                        <a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo" aria-expanded="false">
-                                      هل التطبيق مجاني بالكامل؟
-                                   </a>
+                                        <a data-toggle="collapse" data-parent="#collapseOne" href="#collapseTwo" aria-expanded="false">
+                                            <i class="fas fa-angle-up" aria-hidden="true"></i> هل التطبيق مجاني بالكامل؟
+                                        </a>
                                     </h5>
                                 </div>
 
-                                <div id="collapseTwo" class="collapse show">
+                                <div id="collapseTwo" class="collapse">
                                     <div class="card-block">
                                         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها.
                                     </div>
@@ -343,13 +345,13 @@
                             <div class="card">
                                 <div class="card-header">
                                     <h5>
-                                        <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree" aria-expanded="false">
-                                      ما نوع لمطاعم المتاحة على التطبيق؟
-                                   </a>
+                                        <a data-toggle="collapse" href="#collapseThree" data-parent="#collapseOne" aria-expanded="false">
+                                            <i class="fas fa-angle-up" aria-hidden="true"></i> ما نوع لمطاعم المتاحة على التطبيق؟
+                                        </a>
                                     </h5>
                                 </div>
 
-                                <div id="collapseThree" class="collapse show">
+                                <div id="collapseThree" class="collapse">
                                     <div class="card-block">
                                         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها.
                                     </div>
@@ -364,12 +366,12 @@
                                 <div class="card-header">
                                     <h5>
                                         <a data-toggle="collapse" data-parent="#accordion2" href="#collapsefour" aria-expanded="false">
-                                      هل التطبيق متاح باكثر من نظام؟
-                                   </a>
+                                            <i class="fas fa-angle-up" aria-hidden="true"></i> هل التطبيق متاح باكثر من نظام؟
+                                        </a>
                                     </h5>
                                 </div>
 
-                                <div id="collapsefour" class="collapse show">
+                                <div id="collapsefour" class="collapse">
                                     <div class="card-block">
                                         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها.
                                     </div>
@@ -380,12 +382,12 @@
                                 <div class="card-header">
                                     <h5>
                                         <a data-toggle="collapse" data-parent="#accordion2" href="#collapseFive" aria-expanded="false">
-                                      هل التطبيق مجاني بالكامل؟
-                                   </a>
+                                            <i class="fas fa-angle-up" aria-hidden="true"></i> هل التطبيق مجاني بالكامل؟
+                                        </a>
                                     </h5>
                                 </div>
 
-                                <div id="collapseFive" class="collapse show">
+                                <div id="collapseFive" class="collapse">
                                     <div class="card-block">
                                         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها.
                                     </div>
@@ -396,12 +398,12 @@
                                 <div class="card-header">
                                     <h5>
                                         <a data-toggle="collapse" data-parent="#accordion2" href="#collapseSix" aria-expanded="false">
-                                      ما نوع المطاعم المتاحة على التطبيق؟
-                                   </a>
+                                            <i class="fas fa-angle-up" aria-hidden="true"></i> ما نوع المطاعم المتاحة على التطبيق؟
+                                        </a>
                                     </h5>
                                 </div>
 
-                                <div id="collapseSix" class="collapse show">
+                                <div id="collapseSix" class="collapse">
                                     <div class="card-block">
                                         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها.
                                     </div>
@@ -421,7 +423,7 @@
             <div class="footer">
                 <div class="row">
                     <div class="col-md">
-                        <div class="width">
+                        <div class="widget">
 
                             <div class="title">
                                 <h4>
@@ -437,24 +439,24 @@
                                 <ul class="social-links list-inline">
                                     <li class="list-inline-item">
                                         <a href="#">
-                                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                            <i class="fab fa-linkedin" aria-hidden="true"></i>
                                         </a>
                                     </li>
 
                                     <li class="list-inline-item">
                                         <a href="#">
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                                            <i class="fab fa-twitter" c aria-hidden="true"></i>
                                         </a>
                                     </li>
 
                                     <li class="list-inline-item">
                                         <a href="#">
-                                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                                            <i class="fab fa-google-plus" aria-hidden="true"></i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
                                         <a href="#">
-                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
                                         </a>
                                     </li>
 
@@ -465,7 +467,7 @@
                     </div>
 
                     <div class="col-md">
-                        <div class="width">
+                        <div class="widget">
 
                             <div class="title">
                                 <h4>
@@ -492,7 +494,7 @@
 
                     <div class="col-md">
 
-                        <div class="width">
+                        <div class="widget">
                             <div class="title">
                                 <h4>
                                     القائمة البريدية
@@ -502,7 +504,7 @@
                             <div class="content">
                                 <form action="#" method="post" name="myForm" id="emailForm">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="البريد الالكترونى" required name="email">
+                                        <input type="email" class="form-control" placeholder="البريد الالكترونى " required name="email">
                                         <button class="btn Form-Submit" type="submit" name="submit" value="Submit">
                                            أضفني للقائمة البريدية
                                         </button>
@@ -522,6 +524,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
